welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:1: error: Missing closing brace `}' assumed here
def icyHot(temp1:Int, temp2:Int):Boolean = {
^