welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
	(temp1,temp2) match {
		case (x,y) if (x<=0 && y>=100) => return true
		case (x,y) if (y<=0 && x>=100) => return true
		case (x,y)				 => return false
	}
